# paradigm_submission

./: .gitignore  AUTORESEARCH.md  Cargo.toml  README.md  ideas.md  pyproject.toml
analysis/: backtest_analysis.py  backtest_runner.py  sweep.py
sample_configs/: window_1770262200.toml  window_1770273000.toml  window_1770282000.toml  window_1770290100.toml  window_1770298200.toml
sample_data/2026-02-05/features/: data_1770262200.parquet  data_1770273000.parquet  data_1770282000.parquet  data_1770290100.parquet  data_1770298200.parquet
sample_data/2026-02-05/orderbooks/: deltas_1770262200.parquet  deltas_1770273000.parquet  deltas_1770282000.parquet  deltas_1770290100.parquet  deltas_1770298200.parquet  snapshots_1770262200.parquet  snapshots_1770273000.parquet  snapshots_1770282000.parquet  snapshots_1770290100.parquet  snapshots_1770298200.parquet
sample_data/2026-02-05/trades/: trades_1770262200.parquet  trades_1770273000.parquet  trades_1770282000.parquet  trades_1770290100.parquet  trades_1770298200.parquet
src/: features.rs  lib.rs  market.rs  pricing.rs  types.rs  volatility.rs
src/backtest/: config.rs  engine.rs  event_loader.rs  exchange_sim.rs  latency_model.rs  mod.rs  queue_model.rs  recorder.rs  types.rs
src/backtest/tests/: event_ordering_tests.rs  fixture_generator.rs  integration_tests.rs  mod.rs  (+6 more)
src/engine/: mod.rs  types.rs
src/models/: backtest_logger.rs  binary_option.rs  fair_value_logger.rs  mod.rs
src/strategies/: basic_mm.rs  ladder_mm.rs  mod.rs
src/tracking/: active_market.rs  mod.rs  order_tracker.rs  position_tracker.rs
