[package]
name = "polymarket_mm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
polyfill-rs = { path = "polyfill-rs" }
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
libm = "0.2"
async-trait = "0.1"
tokio-stream = "0.1"
async-stream = "0.3"
polars = { version = "0.35", features = ["parquet", "lazy"] }
dotenvy = "0.15"
rand = "0.8"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
